[gd_scene load_steps=5 format=3 uid="uid://uqj3rsqldggj"]

[ext_resource type="Script" path="res://assets/common/GUI/Inventory.gd" id="1_u5i2x"]
[ext_resource type="Texture2D" uid="uid://bs30r13d3hbgr" path="res://icon.svg" id="2_v78ak"]

[sub_resource type="InputEventAction" id="InputEventAction_noa2c"]
action = &"main_gameplay_inventory"

[sub_resource type="Shortcut" id="Shortcut_appoy"]
events = [SubResource("InputEventAction_noa2c")]

[node name="Inventory" type="VBoxContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -424.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_u5i2x")

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = true
shortcut = SubResource("Shortcut_appoy")
shortcut_feedback = false
text = "Inventory"

[node name="InventoryContainer" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemIconsGrid" type="GridContainer" parent="InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 3

[node name="Item0" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
editor_description = "put item description here"
layout_mode = 2
tooltip_text = "hover to display text"
icon = ExtResource("2_v78ak")

[node name="Item1" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
icon = ExtResource("2_v78ak")

[node name="Item2" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
icon = ExtResource("2_v78ak")

[node name="Item3" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
icon = ExtResource("2_v78ak")

[node name="Item4" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
icon = ExtResource("2_v78ak")

[node name="Item5" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
icon = ExtResource("2_v78ak")

[node name="PanelContainer" type="PanelContainer" parent="InventoryContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ItemText" type="RichTextLabel" parent="InventoryContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "this is your inventory. 
click on an item above to learn more."
fit_content = true

[connection signal="toggled" from="InventoryButton" to="." method="_on_inventory_button_toggled"]
